--- a/zego-video-talk/index.html
+++ b/zego-video-talk/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <video id="video_local" autoplay></video>
-  <div id="video_remote"></div>
+  <video id="video_remote" autoplay></video>
 </body>
-<script type="module" src="main.js"></script>
+<script src="main.js"></script>
 </html>
