--- a/webrtc-capture/index.html
+++ b/webrtc-capture/index.html
@@ -1,32 +1,55 @@
 <!doctype html>
 <html>
 <head>
-	<title>WebRTC: Photo Capture Demo</title>
-	<meta charset='utf-8'>
-	<link rel="stylesheet" href="style.css">
-	<script src="main.js">
-	</script>
+  <title>WebRTC: Photo Capture Demo</title>
+  <meta charset='utf-8'>
+  <style>
+    #video {
+      border: 1px dashed #ccc;
+    }
+
+    #canvas {
+      display: none;
+    }
+
+    .photo {
+      margin: 10px 20px;
+      border: 1px solid #ccc;
+      width: 320px;
+      height: 240px;
+    }
+
+    .camera {
+      display: flex;
+    }
+
+    .camera button {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 4px 20px;
+      border-radius: 4px;
+    }
+
+    .gallery {
+
+    }
+  </style>
 </head>
 <body>
-<div class="contentarea">
-	<h1>
-		MDN - WebRTC: Still photo capture demo
-	</h1>
-	<p>
-		This example demonstrates how to set up a media stream using your built-in webcam, fetch an image from that stream, and create a PNG using that image.
-	</p>
+  <h2>WebRTC Photo Capture Demo</h2>
   <div class="camera">
-    <video id="video">Video stream not available.</video>
-    <button id="startbutton">Take photo</button> 
+    <div>
+      <video id="video" class="photo">Video stream not available.</video>
+      <button id="takePhoto">拍照</button>
+    </div>
+    <div>
+      <img id="photo" class="photo" alt="The screen capture will appear in this box.">
+      <button id="addPhoto">加入相册</button>
+    </div>
+    <canvas id="canvas"></canvas>
   </div>
-  <canvas id="canvas">
-  </canvas>
-  <div class="output">
-    <img id="photo" alt="The screen capture will appear in this box."> 
-  </div>
-	<p>
-		Visit our article <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Taking_still_photos"> Taking still photos with WebRTC</a> to learn more about the technologies used here.
-	</p>
-</div>
+  <div class="gallery"></div>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
